Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -255,6 +255,37 @@
     ]
   },
   {
+    "title": "Đang bị khởi tố hành vi hiếp dâm, đột nhập nhà hàng xóm trộm tài sản",
+    "content": "Đặng Khánh Phương, 17 tuổi, đang bị điều tra về hành vi hiếp dâm và vừa bị khởi tố thêm về tội trộm cắp tài sản. Mặc dù bị cấm đi khỏi nơi cư trú, Phương đã lén lút đột nhập vào nhà hàng xóm để lấy trộm hai con heo đất, thu được hơn 9 triệu đồng. Hiện vụ việc đang được cơ quan chức năng tiếp tục điều tra.",
+    "link": "https://tuoitre.vn/dang-bi-khoi-to-hanh-vi-hiep-dam-dot-nhap-nha-hang-xom-trom-tai-san-20250311082833393.htm",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 8,
+    "question": "Đặng Khánh Phương đã phạm tội gì ngoài hành vi hiếp dâm?",
+    "answers": [
+      {
+        "text": "Trộm cắp tài sản",
+        "correct": true
+      },
+      {
+        "text": "Giết người",
+        "correct": false
+      },
+      {
+        "text": "Lừa đảo",
+        "correct": false
+      },
+      {
+        "text": "Cố ý gây thương tích",
+        "correct": false
+      },
+      {
+        "text": "Mua bán ma túy",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nặng ngực do hẹp ba nhánh mạch vành",
     "content": "Ông Philip, 61 tuổi, nhập viện với triệu chứng nặng ngực do hẹp ba nhánh mạch vành, trong đó động mạch liên thất trước hẹp 70%. Sau khi chụp CT và OCT, bác sĩ xác định ông mắc bệnh xơ vữa không ổn định và quyết định can thiệp đặt stent để ngăn ngừa nguy cơ nhồi máu cơ tim. Sau can thiệp, tình trạng của ông đã cải thiện, nhưng cần tuân thủ điều trị và thay đổi lối sống để phòng tránh tái hẹp mạch.",
     "link": "https://vnexpress.net/nang-nguc-do-hep-ba-nhanh-mach-vanh-4859412.html",
@@ -935,6 +966,64 @@
     ]
   },
   {
+    "title": "Xe con phóng nhanh gặp xe tải bất ngờ mở cửa",
+    "content": "Vào ngày 10/3 tại đường tỉnh 78, Ba Vì, một vụ việc giao thông đã xảy ra khi một xe con đang phóng nhanh với tốc độ hơn 60 km/h gặp phải xe tải đang đỗ lề đường bất ngờ mở cửa. Mặc dù tài xế xe con gắn camera hành trình không giảm tốc độ, may mắn là không có tai nạn xảy ra. Các chuyên gia nhấn mạnh tầm quan trọng của việc giảm tốc độ khi gặp xe lớn đỗ, đồng thời cảnh báo tài xế xe tải cần quan sát kỹ trước khi mở cửa xe để tránh sự cố. Theo luật mới, hành vi mở cửa không an toàn có thể bị phạt đến 22 triệu đồng nếu dẫn đến tai nạn.",
+    "link": "https://vnexpress.net/xe-con-phong-nhanh-gap-xe-tai-bat-ngo-mo-cua-4859155.html",
+    "cat": "oto-xe-may",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao tài xế xe con nên giảm tốc độ khi thấy xe tải đỗ bên đường?",
+    "answers": [
+      {
+        "text": "Để tránh va chạm khi xe tải mở cửa bất ngờ.",
+        "correct": true
+      },
+      {
+        "text": "Để tiết kiệm nhiên liệu.",
+        "correct": false
+      },
+      {
+        "text": "Để tăng tốc độ di chuyển.",
+        "correct": false
+      },
+      {
+        "text": "Để giảm tiếng ồn khi lái xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tỷ phú Elon Musk chỉ cách vui vẻ, tự tin học tập dù AI phát triển bùng nổ",
+    "content": "Tỷ phú Elon Musk gần đây đã chia sẻ hai lời khuyên cho những người trẻ trong bối cảnh trí tuệ nhân tạo (AI) phát triển mạnh mẽ, có khả năng thay thế nhiều công việc. Ông khuyến khích giới trẻ nên theo đuổi đam mê và trở nên hữu ích cho cộng đồng. Musk cũng nhấn mạnh tầm quan trọng của nỗ lực lao động để thích ứng với sự thay đổi do AI mang lại, đồng thời khuyến khích mọi người không nên nản lòng trước sự cạnh tranh từ công nghệ.",
+    "link": "https://dantri.com.vn/giao-duc/ty-phu-elon-musk-chi-cach-vui-ve-tu-tin-hoc-tap-du-ai-phat-trien-bung-no-20250310160338475.htm",
+    "cat": "gia-dinh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Elon Musk đã đưa ra những lời khuyên gì cho giới trẻ trong bối cảnh AI phát triển?",
+    "answers": [
+      {
+        "text": "Theo đuổi đam mê và trở nên hữu ích cho cộng đồng",
+        "correct": true
+      },
+      {
+        "text": "Nên từ bỏ ước mơ và tìm một công việc ổn định",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần làm việc ít hơn 6 tiếng mỗi ngày",
+        "correct": false
+      },
+      {
+        "text": "Tập trung vào việc học các công nghệ mới",
+        "correct": false
+      },
+      {
+        "text": "Không cần lo lắng về sự phát triển của AI",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hà Nội cho phép nâng chiều cao khu tập thể Thành Công lên 40 tầng",
     "content": "Hà Nội đã cho phép quận Ba Đình nghiên cứu phương án nâng chiều cao tối đa lên 40 tầng cho khu chung cư cũ Thành Công trong quá trình cải tạo, tái thiết. Quyết định này nhằm kết nối không gian hồ Thành Công với các khu vực xanh và mở rộng trục đường nội khu. Thành phố yêu cầu quận phải hoàn thiện phương án trình Sở Quy hoạch Kiến trúc trước ngày 25/3, trong khi cũng đề xuất nâng cao tầng cho các khu chung cư khác trên địa bàn.",
     "link": "https://vnexpress.net/ha-noi-cho-phep-nang-chieu-cao-khu-tap-the-thanh-cong-len-40-tang-4859359.html",
@@ -997,64 +1086,6 @@
     ]
   },
   {
-    "title": "Xe con phóng nhanh gặp xe tải bất ngờ mở cửa",
-    "content": "Vào ngày 10/3 tại đường tỉnh 78, Ba Vì, một vụ việc giao thông đã xảy ra khi một xe con đang phóng nhanh với tốc độ hơn 60 km/h gặp phải xe tải đang đỗ lề đường bất ngờ mở cửa. Mặc dù tài xế xe con gắn camera hành trình không giảm tốc độ, may mắn là không có tai nạn xảy ra. Các chuyên gia nhấn mạnh tầm quan trọng của việc giảm tốc độ khi gặp xe lớn đỗ, đồng thời cảnh báo tài xế xe tải cần quan sát kỹ trước khi mở cửa xe để tránh sự cố. Theo luật mới, hành vi mở cửa không an toàn có thể bị phạt đến 22 triệu đồng nếu dẫn đến tai nạn.",
-    "link": "https://vnexpress.net/xe-con-phong-nhanh-gap-xe-tai-bat-ngo-mo-cua-4859155.html",
-    "cat": "oto-xe-may",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Tại sao tài xế xe con nên giảm tốc độ khi thấy xe tải đỗ bên đường?",
-    "answers": [
-      {
-        "text": "Để tránh va chạm khi xe tải mở cửa bất ngờ.",
-        "correct": true
-      },
-      {
-        "text": "Để tiết kiệm nhiên liệu.",
-        "correct": false
-      },
-      {
-        "text": "Để tăng tốc độ di chuyển.",
-        "correct": false
-      },
-      {
-        "text": "Để giảm tiếng ồn khi lái xe.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tỷ phú Elon Musk chỉ cách vui vẻ, tự tin học tập dù AI phát triển bùng nổ",
-    "content": "Tỷ phú Elon Musk gần đây đã chia sẻ hai lời khuyên cho những người trẻ trong bối cảnh trí tuệ nhân tạo (AI) phát triển mạnh mẽ, có khả năng thay thế nhiều công việc. Ông khuyến khích giới trẻ nên theo đuổi đam mê và trở nên hữu ích cho cộng đồng. Musk cũng nhấn mạnh tầm quan trọng của nỗ lực lao động để thích ứng với sự thay đổi do AI mang lại, đồng thời khuyến khích mọi người không nên nản lòng trước sự cạnh tranh từ công nghệ.",
-    "link": "https://dantri.com.vn/giao-duc/ty-phu-elon-musk-chi-cach-vui-ve-tu-tin-hoc-tap-du-ai-phat-trien-bung-no-20250310160338475.htm",
-    "cat": "gia-dinh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Elon Musk đã đưa ra những lời khuyên gì cho giới trẻ trong bối cảnh AI phát triển?",
-    "answers": [
-      {
-        "text": "Theo đuổi đam mê và trở nên hữu ích cho cộng đồng",
-        "correct": true
-      },
-      {
-        "text": "Nên từ bỏ ước mơ và tìm một công việc ổn định",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần làm việc ít hơn 6 tiếng mỗi ngày",
-        "correct": false
-      },
-      {
-        "text": "Tập trung vào việc học các công nghệ mới",
-        "correct": false
-      },
-      {
-        "text": "Không cần lo lắng về sự phát triển của AI",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Toàn đội nhảy trượt tuyết Na Uy gian lận ở giải thế giới",
     "content": "Tại giải nhảy trượt tuyết thế giới 2025 ở Na Uy, toàn đội đã thừa nhận gian lận bằng cách gia cố bộ đồ thi đấu để cải thiện thành tích. HLV Magnus Brevig và kỹ thuật viên Adrian Livelten bị phát hiện đã chỉnh sửa bộ đồ và thay đổi chip chứng nhận để qua mặt kiểm tra. Hành động này đã dẫn đến việc Ba Lan, Slovenia và Áo phản đối và đội Na Uy bị tước huy chương. Liên đoàn Trượt tuyết Na Uy đã đình chỉ các cá nhân liên quan và đang tiến hành điều tra.",
     "link": "https://vnexpress.net/toan-doi-nhay-truot-tuyet-na-uy-gian-lan-o-giai-the-gioi-4859370.html",
@@ -1109,6 +1140,33 @@
     ]
   },
   {
+    "title": "Cách phân biệt giữa 'va chạm giao thông' và 'tai nạn giao thông'",
+    "content": "Bài viết phân tích sự khác biệt giữa 'va chạm giao thông' và 'tai nạn giao thông' dựa trên mức độ gây thiệt hại về người và tài sản. Va chạm giao thông được định nghĩa là những sự cố có thiệt hại dưới mức quy định của tai nạn giao thông, như gây thương tích cho một người với tỷ lệ thương tật dưới 11% hoặc thiệt hại tài sản dưới 10 triệu đồng. Ngược lại, tai nạn giao thông có mức độ thiệt hại nghiêm trọng hơn, dẫn đến việc xử lý pháp lý khác nhau, trong đó tai nạn có thể bị truy cứu trách nhiệm hình sự.",
+    "link": "https://vnexpress.net/cach-phan-biet-giua-va-cham-giao-thong-va-tai-nan-giao-thong-4859145.html",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Va chạm giao thông khác tai nạn giao thông như thế nào?",
+    "answers": [
+      {
+        "text": "Va chạm giao thông có thiệt hại nhẹ hơn tai nạn giao thông.",
+        "correct": true
+      },
+      {
+        "text": "Va chạm giao thông luôn gây thiệt hại nặng nề.",
+        "correct": false
+      },
+      {
+        "text": "Tai nạn giao thông xảy ra chỉ với một xe.",
+        "correct": false
+      },
+      {
+        "text": "Va chạm giao thông không bao giờ bị phạt.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bác sĩ vẽ bản đồ tim cứu sản phụ thoát cửa tử",
     "content": "Một sản phụ 36 tuổi đã thoát khỏi nguy cơ tử vong trong ca mổ sinh nhờ vào sự can thiệp kịp thời của bác sĩ. Trong quá trình mang thai, chị gặp phải tình trạng nhịp tim nhanh lên đến 190 lần/phút và không đáp ứng với thuốc điều trị. Các bác sĩ đã sử dụng kỹ thuật lập bản đồ tim 3D để xác định nguyên nhân và thực hiện đốt điện giúp nhịp tim trở lại bình thường, đảm bảo sự an toàn cho cả mẹ và bé.",
     "link": "https://vnexpress.net/bac-si-ve-ban-do-tim-cuu-san-phu-thoat-cua-tu-4858948.html",
@@ -1135,33 +1193,6 @@
       },
       {
         "text": "Không thực hiện mổ mà chỉ theo dõi tình trạng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cách phân biệt giữa 'va chạm giao thông' và 'tai nạn giao thông'",
-    "content": "Bài viết phân tích sự khác biệt giữa 'va chạm giao thông' và 'tai nạn giao thông' dựa trên mức độ gây thiệt hại về người và tài sản. Va chạm giao thông được định nghĩa là những sự cố có thiệt hại dưới mức quy định của tai nạn giao thông, như gây thương tích cho một người với tỷ lệ thương tật dưới 11% hoặc thiệt hại tài sản dưới 10 triệu đồng. Ngược lại, tai nạn giao thông có mức độ thiệt hại nghiêm trọng hơn, dẫn đến việc xử lý pháp lý khác nhau, trong đó tai nạn có thể bị truy cứu trách nhiệm hình sự.",
-    "link": "https://vnexpress.net/cach-phan-biet-giua-va-cham-giao-thong-va-tai-nan-giao-thong-4859145.html",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Va chạm giao thông khác tai nạn giao thông như thế nào?",
-    "answers": [
-      {
-        "text": "Va chạm giao thông có thiệt hại nhẹ hơn tai nạn giao thông.",
-        "correct": true
-      },
-      {
-        "text": "Va chạm giao thông luôn gây thiệt hại nặng nề.",
-        "correct": false
-      },
-      {
-        "text": "Tai nạn giao thông xảy ra chỉ với một xe.",
-        "correct": false
-      },
-      {
-        "text": "Va chạm giao thông không bao giờ bị phạt.",
         "correct": false
       }
     ]
@@ -1341,6 +1372,33 @@
     ]
   },
   {
+    "title": "Toàn quốc dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
+    "content": "Phó thủ tướng Nguyễn Hòa Bình thông báo rằng số lượng đơn vị hành chính cấp xã trên toàn quốc sẽ giảm từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc sáp nhập này dự kiến sẽ hoàn thành vào tháng 6 năm 2025. Trung ương sẽ ban hành tiêu chí cho các địa phương để xây dựng phương án sắp xếp, đồng thời nâng cao chất lượng cán bộ cấp xã để tương đương với cán bộ cấp tỉnh.",
+    "link": "https://vnexpress.net/toan-quoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Việt Nam dự kiến có bao nhiêu đơn vị hành chính cấp xã sau khi sáp nhập?",
+    "answers": [
+      {
+        "text": "2.500",
+        "correct": true
+      },
+      {
+        "text": "10.000",
+        "correct": false
+      },
+      {
+        "text": "8.500",
+        "correct": false
+      },
+      {
+        "text": "5.000",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cả nước dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
     "content": "Phó thủ tướng Nguyễn Hòa Bình cho biết cả nước dự kiến sẽ giảm số lượng đơn vị hành chính cấp xã từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc này dự kiến sẽ hoàn thành vào tháng 6 tới, với các tiêu chí sẽ được Trung ương ban hành để các địa phương lập phương án sắp xếp. Chất lượng cán bộ cấp xã cũng sẽ được nâng cao, nhằm tăng cường hiệu quả quản lý.",
     "link": "https://vnexpress.net/ca-nuoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
@@ -1367,33 +1425,6 @@
       },
       {
         "text": "3.500",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Toàn quốc dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
-    "content": "Phó thủ tướng Nguyễn Hòa Bình thông báo rằng số lượng đơn vị hành chính cấp xã trên toàn quốc sẽ giảm từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc sáp nhập này dự kiến sẽ hoàn thành vào tháng 6 năm 2025. Trung ương sẽ ban hành tiêu chí cho các địa phương để xây dựng phương án sắp xếp, đồng thời nâng cao chất lượng cán bộ cấp xã để tương đương với cán bộ cấp tỉnh.",
-    "link": "https://vnexpress.net/toan-quoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Việt Nam dự kiến có bao nhiêu đơn vị hành chính cấp xã sau khi sáp nhập?",
-    "answers": [
-      {
-        "text": "2.500",
-        "correct": true
-      },
-      {
-        "text": "10.000",
-        "correct": false
-      },
-      {
-        "text": "8.500",
-        "correct": false
-      },
-      {
-        "text": "5.000",
         "correct": false
       }
     ]
@@ -3900,33 +3931,6 @@
     ]
   },
   {
-    "title": "Tê tay có phải dấu hiệu đột quỵ?",
-    "content": "Tê tay có thể xuất phát từ nhiều nguyên nhân khác nhau, nhưng nó cũng có thể là dấu hiệu cảnh báo đột quỵ. Việc nhận biết sớm các triệu chứng này cực kỳ quan trọng để tránh những biến chứng nguy hiểm. Bài viết nhấn mạnh tầm quan trọng của việc theo dõi các dấu hiệu để có phản ứng kịp thời.",
-    "link": "https://vnexpress.net/te-tay-co-phai-dau-hieu-dot-quy-4858950.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tê tay có phải là dấu hiệu của đột quỵ không?",
-    "answers": [
-      {
-        "text": "Có, tê tay có thể là dấu hiệu của đột quỵ.",
-        "correct": true
-      },
-      {
-        "text": "Không, tê tay chỉ là triệu chứng bình thường.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng nó không liên quan đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Không, tê tay không ảnh hưởng đến đột quỵ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hàng chục chiếc VF 3 dạo phố trước cuộc thi của VinFast",
     "content": "Vào ngày Quốc tế phụ nữ 8/3, một nhóm hơn 40 nữ chủ xe VF 3 đã tổ chức một cuộc diễu hành qua các tuyến phố Hà Nội để quảng bá cho cuộc thi \"Sáng tạo chất riêng, Độc bản cá tính\" do VinFast tổ chức. Những chiếc xe VF 3 được cá nhân hóa với nhiều màu sắc và phong cách khác nhau đã thu hút sự chú ý của đông đảo người dân. Sự kiện này không chỉ là dịp để các chị em giao lưu mà còn lan tỏa cảm hứng sáng tạo trong cộng đồng. Cuộc thi sẽ diễn ra vào ngày 22/3 tại nhiều thành phố lớn, với tổng giá trị giải thưởng lên tới 650 triệu đồng.",
     "link": "https://vnexpress.net/hang-chuc-chiec-vf-3-dao-pho-truoc-cuoc-thi-cua-vinfast-4859032.html",
@@ -3953,6 +3957,33 @@
       },
       {
         "text": "1/3",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tê tay có phải dấu hiệu đột quỵ?",
+    "content": "Tê tay có thể xuất phát từ nhiều nguyên nhân khác nhau, nhưng nó cũng có thể là dấu hiệu cảnh báo đột quỵ. Việc nhận biết sớm các triệu chứng này cực kỳ quan trọng để tránh những biến chứng nguy hiểm. Bài viết nhấn mạnh tầm quan trọng của việc theo dõi các dấu hiệu để có phản ứng kịp thời.",
+    "link": "https://vnexpress.net/te-tay-co-phai-dau-hieu-dot-quy-4858950.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tê tay có phải là dấu hiệu của đột quỵ không?",
+    "answers": [
+      {
+        "text": "Có, tê tay có thể là dấu hiệu của đột quỵ.",
+        "correct": true
+      },
+      {
+        "text": "Không, tê tay chỉ là triệu chứng bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng nó không liên quan đến sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Không, tê tay không ảnh hưởng đến đột quỵ.",
         "correct": false
       }
     ]
