Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Mẹ đơn thân mất con, mất nhà phải đi ở nhờ sau vụ cháy chung cư mini 56 người chết",
+    "content": "Chị Tạ Thị Hương Giang, một mẹ đơn thân, đã mất con gái trong vụ cháy chung cư mini làm 56 người thiệt mạng. Sau thảm họa, chị không chỉ mất đi người thân mà còn phải về ở nhờ nhà bố mẹ, rơi vào tình trạng trầm cảm. Tại phiên tòa xét xử chủ nhà và các cựu cán bộ liên quan, chị Giang bày tỏ mong muốn được bồi thường để có nơi thờ cúng cho con và tiếp tục cuộc sống.",
+    "link": "https://tuoitre.vn/me-don-than-mat-con-mat-nha-phai-di-o-nho-sau-vu-chay-chung-cu-mini-56-nguoi-chet-20250311073510629.htm",
+    "cat": "phap-luat",
+    "positivity": 2,
+    "importance": 9,
+    "question": "Chị Tạ Thị Hương Giang đã trải qua nỗi đau gì sau vụ cháy chung cư mini?",
+    "answers": [
+      {
+        "text": "Chị mất con gái trong vụ cháy.",
+        "correct": true
+      },
+      {
+        "text": "Chị được bồi thường 25 tỷ đồng.",
+        "correct": false
+      },
+      {
+        "text": "Chị đã thoát khỏi vụ cháy mà không bị thương.",
+        "correct": false
+      },
+      {
+        "text": "Chị chuyển đến sống ở nhà mới.",
+        "correct": false
+      },
+      {
+        "text": "Chị không tham gia phiên tòa xét xử.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cựu thứ trưởng Bộ TN-MT tạo điều kiện cho doanh nghiệp khai thác đất hiếm bán sang Trung Quốc",
     "content": "Ông Nguyễn Linh Ngọc, cựu thứ trưởng Bộ Tài nguyên và Môi trường, đã bị Viện Kiểm sát nhân dân tối cao truy tố vì đã tạo điều kiện cho Công ty Thái Dương khai thác trái phép đất hiếm và bán sang Trung Quốc. Mặc dù biết công ty này chưa đủ điều kiện để cấp phép, ông Ngọc vẫn ký giấy phép khai thác khoáng sản cho họ. Vụ án còn liên quan đến nhiều cán bộ khác và đã gây thiệt hại tài sản Nhà nước lên tới 763 tỷ đồng.",
     "link": "https://tuoitre.vn/cuu-thu-truong-bo-tn-mt-tao-dieu-kien-cho-doanh-nghiep-khai-thac-dat-hiem-ban-sang-trung-quoc-20250311092705677.htm",
@@ -497,6 +528,33 @@
       },
       {
         "text": "Không thực hiện đúng quy định về môi trường",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hồi sinh nhờ quả thận bố tặng",
+    "content": "Một người phụ nữ 28 tuổi từ Tây Ninh đã hồi sinh nhờ ghép thận do bố hiến tặng sau khi mắc bệnh thận hư và suy thận giai đoạn cuối. Bệnh nhân từng bỏ qua điều trị và chỉ nhận ra mức độ nghiêm trọng khi sức khỏe xấu đi sau khi mang thai và sảy thai. Cuối cùng, sau ca phẫu thuật vào tháng 2 năm 2025, chức năng thận của cô đã phục hồi, cho phép cô trở lại cuộc sống bình thường.",
+    "link": "https://vnexpress.net/hoi-sinh-nho-qua-than-bo-tang-4859267.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Người phụ nữ đã hồi sinh nhờ đâu?",
+    "answers": [
+      {
+        "text": "Quả thận bố tặng",
+        "correct": true
+      },
+      {
+        "text": "Quả thận mẹ tặng",
+        "correct": false
+      },
+      {
+        "text": "Ghép thận từ người lạ",
+        "correct": false
+      },
+      {
+        "text": "Điều trị thuốc đặc hiệu",
         "correct": false
       }
     ]
@@ -1356,37 +1414,6 @@
     ]
   },
   {
-    "title": "Hà Nội cho phép nâng chiều cao khu tập thể Thành Công lên 40 tầng",
-    "content": "Hà Nội đã cho phép quận Ba Đình nghiên cứu phương án nâng chiều cao tối đa lên 40 tầng cho khu chung cư cũ Thành Công trong quá trình cải tạo, tái thiết. Quyết định này nhằm kết nối không gian hồ Thành Công với các khu vực xanh và mở rộng trục đường nội khu. Thành phố yêu cầu quận phải hoàn thiện phương án trình Sở Quy hoạch Kiến trúc trước ngày 25/3, trong khi cũng đề xuất nâng cao tầng cho các khu chung cư khác trên địa bàn.",
-    "link": "https://vnexpress.net/ha-noi-cho-phep-nang-chieu-cao-khu-tap-the-thanh-cong-len-40-tang-4859359.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Hà Nội đã cho phép nâng chiều cao khu tập thể Thành Công lên bao nhiêu tầng?",
-    "answers": [
-      {
-        "text": "40 tầng",
-        "correct": true
-      },
-      {
-        "text": "30 tầng",
-        "correct": false
-      },
-      {
-        "text": "24 tầng",
-        "correct": false
-      },
-      {
-        "text": "20 tầng",
-        "correct": false
-      },
-      {
-        "text": "50 tầng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Người trẻ chọn sếp",
     "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
     "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
@@ -1413,6 +1440,37 @@
       },
       {
         "text": "Vì họ muốn có thời gian làm việc thoải mái.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hà Nội cho phép nâng chiều cao khu tập thể Thành Công lên 40 tầng",
+    "content": "Hà Nội đã cho phép quận Ba Đình nghiên cứu phương án nâng chiều cao tối đa lên 40 tầng cho khu chung cư cũ Thành Công trong quá trình cải tạo, tái thiết. Quyết định này nhằm kết nối không gian hồ Thành Công với các khu vực xanh và mở rộng trục đường nội khu. Thành phố yêu cầu quận phải hoàn thiện phương án trình Sở Quy hoạch Kiến trúc trước ngày 25/3, trong khi cũng đề xuất nâng cao tầng cho các khu chung cư khác trên địa bàn.",
+    "link": "https://vnexpress.net/ha-noi-cho-phep-nang-chieu-cao-khu-tap-the-thanh-cong-len-40-tang-4859359.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Hà Nội đã cho phép nâng chiều cao khu tập thể Thành Công lên bao nhiêu tầng?",
+    "answers": [
+      {
+        "text": "40 tầng",
+        "correct": true
+      },
+      {
+        "text": "30 tầng",
+        "correct": false
+      },
+      {
+        "text": "24 tầng",
+        "correct": false
+      },
+      {
+        "text": "20 tầng",
+        "correct": false
+      },
+      {
+        "text": "50 tầng",
         "correct": false
       }
     ]
@@ -2972,28 +3030,28 @@
     ]
   },
   {
-    "title": "Chữa bàn chân bẹt cho trẻ 9 tuổi được không?",
-    "content": "Bài viết cung cấp thông tin về tình trạng bàn chân bẹt ở trẻ em và khả năng điều trị cho trẻ 9 tuổi. Bàn chân bẹt là tình trạng không có độ lõm ở lòng bàn chân, có thể gây đau nhức và ảnh hưởng đến các bộ phận khác của cơ thể. Phương pháp điều trị thường được khuyên là sử dụng đế chỉnh hình kết hợp với vật lý trị liệu, giúp tái tạo vòm bàn chân và ngăn ngừa biến chứng. Cha mẹ nên đưa trẻ đến bệnh viện để được khám và điều trị phù hợp.",
-    "link": "https://vnexpress.net/chua-ban-chan-bet-cho-tre-9-tuoi-duoc-khong-4859115.html",
+    "title": "Hội chứng Guillain - Barré nguy hiểm không?",
+    "content": "Hội chứng Guillain - Barré là một bệnh lý thần kinh cơ ngoại vi tự miễn cấp tính, xảy ra khi hệ miễn dịch tấn công các dây thần kinh ngoại vi, dẫn đến tổn thương chức năng thần kinh. Bệnh có thể gây ra triệu chứng như yếu liệt, tê bì, và trong trường hợp nặng có thể dẫn đến khó thở và tử vong. Điều trị hội chứng này cần được thực hiện kịp thời tại chuyên khoa thần kinh, với các phương pháp như thay huyết tương và thuốc ức chế miễn dịch. Nếu không điều trị sớm, bệnh có thể tiến triển nặng và gây ra nhiều biến chứng nguy hiểm.",
+    "link": "https://vnexpress.net/hoi-chung-guillain-barre-nguy-hiem-khong-4859113.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Có thể chữa bàn chân bẹt cho trẻ 9 tuổi bằng đế chỉnh hình không?",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Hội chứng Guillain - Barré có nguy hiểm không?",
     "answers": [
       {
-        "text": "Có, sử dụng đế chỉnh hình kết hợp vật lý trị liệu.",
+        "text": "Có, rất nguy hiểm nếu không điều trị kịp thời.",
         "correct": true
       },
       {
-        "text": "Không, bàn chân bẹt không thể chữa trị.",
+        "text": "Không, chỉ là một bệnh nhẹ.",
         "correct": false
       },
       {
-        "text": "Chỉ có thể phẫu thuật khi trẻ lớn hơn.",
+        "text": "Có nhưng không gây biến chứng nặng.",
         "correct": false
       },
       {
-        "text": "Bàn chân bẹt sẽ tự khỏi mà không cần điều trị.",
+        "text": "Có thể tự khỏi mà không cần điều trị.",
         "correct": false
       }
     ]
@@ -3026,28 +3084,28 @@
     ]
   },
   {
-    "title": "Hội chứng Guillain - Barré nguy hiểm không?",
-    "content": "Hội chứng Guillain - Barré là một bệnh lý thần kinh cơ ngoại vi tự miễn cấp tính, xảy ra khi hệ miễn dịch tấn công các dây thần kinh ngoại vi, dẫn đến tổn thương chức năng thần kinh. Bệnh có thể gây ra triệu chứng như yếu liệt, tê bì, và trong trường hợp nặng có thể dẫn đến khó thở và tử vong. Điều trị hội chứng này cần được thực hiện kịp thời tại chuyên khoa thần kinh, với các phương pháp như thay huyết tương và thuốc ức chế miễn dịch. Nếu không điều trị sớm, bệnh có thể tiến triển nặng và gây ra nhiều biến chứng nguy hiểm.",
-    "link": "https://vnexpress.net/hoi-chung-guillain-barre-nguy-hiem-khong-4859113.html",
+    "title": "Chữa bàn chân bẹt cho trẻ 9 tuổi được không?",
+    "content": "Bài viết cung cấp thông tin về tình trạng bàn chân bẹt ở trẻ em và khả năng điều trị cho trẻ 9 tuổi. Bàn chân bẹt là tình trạng không có độ lõm ở lòng bàn chân, có thể gây đau nhức và ảnh hưởng đến các bộ phận khác của cơ thể. Phương pháp điều trị thường được khuyên là sử dụng đế chỉnh hình kết hợp với vật lý trị liệu, giúp tái tạo vòm bàn chân và ngăn ngừa biến chứng. Cha mẹ nên đưa trẻ đến bệnh viện để được khám và điều trị phù hợp.",
+    "link": "https://vnexpress.net/chua-ban-chan-bet-cho-tre-9-tuoi-duoc-khong-4859115.html",
     "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Hội chứng Guillain - Barré có nguy hiểm không?",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Có thể chữa bàn chân bẹt cho trẻ 9 tuổi bằng đế chỉnh hình không?",
     "answers": [
       {
-        "text": "Có, rất nguy hiểm nếu không điều trị kịp thời.",
+        "text": "Có, sử dụng đế chỉnh hình kết hợp vật lý trị liệu.",
         "correct": true
       },
       {
-        "text": "Không, chỉ là một bệnh nhẹ.",
+        "text": "Không, bàn chân bẹt không thể chữa trị.",
         "correct": false
       },
       {
-        "text": "Có nhưng không gây biến chứng nặng.",
+        "text": "Chỉ có thể phẫu thuật khi trẻ lớn hơn.",
         "correct": false
       },
       {
-        "text": "Có thể tự khỏi mà không cần điều trị.",
+        "text": "Bàn chân bẹt sẽ tự khỏi mà không cần điều trị.",
         "correct": false
       }
     ]
@@ -3818,33 +3876,6 @@
     ]
   },
   {
-    "title": "Cúm ảnh hưởng công việc thế nào?",
-    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
-    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
-    "answers": [
-      {
-        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
-        "correct": true
-      },
-      {
-        "text": "Cúm không ảnh hưởng gì đến công việc.",
-        "correct": false
-      },
-      {
-        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
-        "correct": false
-      },
-      {
-        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "PVcomBank ưu đãi với lãi suất chưa đến 4%/năm",
     "content": "Ngân hàng TMCP Đại Chúng Việt Nam (PVcomBank) vừa công bố gói tín dụng ưu đãi mang tên 'Hành trình mới, sống trọn ước mơ' với lãi suất chỉ từ 3,99%/năm. Gói vay này được áp dụng cho cá nhân có nhu cầu mua nhà và hộ kinh doanh, với hạn mức vay lên đến 85% giá trị tài sản và thời gian vay tối đa 35 năm. PVcomBank cũng cam kết đơn giản hóa thủ tục và linh hoạt trong việc chứng minh thu nhập để giúp khách hàng dễ dàng tiếp cận nguồn vốn.",
     "link": "https://tuoitre.vn/pvcombank-uu-dai-voi-lai-suat-chua-den-4-nam-20250310115138353.htm",
@@ -3871,6 +3902,33 @@
       },
       {
         "text": "4,0%/năm",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cúm ảnh hưởng công việc thế nào?",
+    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
+    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
+    "answers": [
+      {
+        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
+        "correct": true
+      },
+      {
+        "text": "Cúm không ảnh hưởng gì đến công việc.",
+        "correct": false
+      },
+      {
+        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
+        "correct": false
+      },
+      {
+        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
         "correct": false
       }
     ]
@@ -4692,33 +4750,6 @@
     ]
   },
   {
-    "title": "Lợi ích sức khỏe của đậu bắp",
-    "content": "Đậu bắp là một loại thực phẩm ít calo nhưng giàu dinh dưỡng, bao gồm magiê, folate, vitamin C, K1 và chất xơ. Nó hỗ trợ sức khỏe tim mạch, giúp kiểm soát lượng đường trong máu và có thể giảm nguy cơ mắc bệnh ung thư. Đặc biệt, folate trong đậu bắp rất có lợi cho phụ nữ mang thai, giảm nguy cơ khuyết tật ống thần kinh cho thai nhi. Đậu bắp cũng chứa nhiều chất chống oxy hóa giúp bảo vệ sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/loi-ich-suc-khoe-cua-dau-bap-4858805.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Đậu bắp có những lợi ích gì cho sức khỏe?",
-    "answers": [
-      {
-        "text": "Hỗ trợ sức khỏe tim mạch và kiểm soát lượng đường trong máu.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có tác dụng làm đẹp da.",
-        "correct": false
-      },
-      {
-        "text": "Không có lợi ích sức khỏe nào.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tốt cho việc giảm cân.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Vợ chồng lục đục do bất đồng khi chữa vô sinh",
     "content": "Bài viết nói về trường hợp của anh Khánh, 32 tuổi, bị vô sinh do tắc ống dẫn tinh nhưng không đồng ý điều trị, dẫn đến mâu thuẫn trong hôn nhân. Sau khi cãi vã và ly thân, anh Khánh quyết định quay lại bệnh viện để điều trị. Bác sĩ đã thực hiện phẫu thuật và thu tinh trùng để chuẩn bị cho thụ tinh ống nghiệm. Bác sĩ cũng khuyên nam giới nên chủ động thăm khám để phát hiện sớm các vấn đề sinh sản.",
     "link": "https://vnexpress.net/vo-chong-luc-duc-do-bat-dong-khi-chua-vo-sinh-4858427.html",
@@ -4741,6 +4772,33 @@
       },
       {
         "text": "Do áp lực công việc của cả hai vợ chồng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lợi ích sức khỏe của đậu bắp",
+    "content": "Đậu bắp là một loại thực phẩm ít calo nhưng giàu dinh dưỡng, bao gồm magiê, folate, vitamin C, K1 và chất xơ. Nó hỗ trợ sức khỏe tim mạch, giúp kiểm soát lượng đường trong máu và có thể giảm nguy cơ mắc bệnh ung thư. Đặc biệt, folate trong đậu bắp rất có lợi cho phụ nữ mang thai, giảm nguy cơ khuyết tật ống thần kinh cho thai nhi. Đậu bắp cũng chứa nhiều chất chống oxy hóa giúp bảo vệ sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-suc-khoe-cua-dau-bap-4858805.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Đậu bắp có những lợi ích gì cho sức khỏe?",
+    "answers": [
+      {
+        "text": "Hỗ trợ sức khỏe tim mạch và kiểm soát lượng đường trong máu.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ có tác dụng làm đẹp da.",
+        "correct": false
+      },
+      {
+        "text": "Không có lợi ích sức khỏe nào.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tốt cho việc giảm cân.",
         "correct": false
       }
     ]
